# MyGraphicsProject

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build.cmd  conanfile.py
src/: main.cpp
